# example-python-visitor

./: .gitignore  README.md  module.codefly.yaml  project.codefly.yaml  workspace.codefly.yaml
applications/: README.md
applications/backend/: README.md  application.codefly.yaml
applications/backend/services/cache/: service.codefly.yaml
applications/backend/services/clicker/: service.codefly.yaml
applications/backend/services/clicks/: README.md  service.codefly.yaml
applications/backend/services/postgres/: service.codefly.yaml
applications/backend/services/redis/: service.codefly.yaml
applications/web/: README.md  application.codefly.yaml
configurations/: README.md
deployments/: README.md
providers/: README.md
providers/local/: dns.env
services/: README.md
services/cache/: service.codefly.yaml
services/frontend/: service.codefly.yaml
services/frontend/builder/: Dockerfile
services/frontend/code/: package-lock.json
services/frontend/src/: package-lock.json
services/store/: service.codefly.yaml
services/store/builder/: Dockerfile
services/visits/: README.md  service.codefly.yaml
services/visits/builder/: Dockerfile
services/visits/code/: pyproject.toml
services/visits/openapi/: api.json  api.swagger.json
services/visits/src/: cache.py  main.py  models.py  openapi.py  pyproject.toml  setup.py  storage.py
services/visits/src/tests/: test_app.py
services/visits/src/tests/codefly_cli/base/v0/: endpoint_pb2.py  service_pb2.py
services/visits/src/tests/codefly_cli/services/runtime/v0/: runtime_pb2.py
(+253 files in other folders)
