[tool.poetry]
name = "Server"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.25.0"
redis = "^5.0.3"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.29"
pydantic = "^2.7.1"
codefly-sdk = "^0.0.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.6"
#codefly-cli = "^0.0.2"
codefly-cli = { path = "/Users/antoine/Development/codefly.dev/core/generated/python/codefly-cli" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
